# DocxInfer

./: Cargo.toml  README.md
src/: main.rs  rendered.rs  schemas.rs  templater.rs  templeter.rs  word.rs
