[package]
name = "docx-infer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
minijinja = { version = "2.14.0", features = ["unstable_machinery", "unstable_machinery_serde", "loader"]}
regex = "1.12.2"
roxmltree = "0.21.1"
serde = "1.0.228"
serde_json = "1.0.149"
zip = "7.2.0"
clap = { version = "4.5.54", features = ["derive"] }
